tests/success/struct_member.crema
struct foo {
  int a,
  int b
}

foo.a = 34
int a = foo.a - 2
