tests/fail/duplicate_struct_member.crema
struct foo {
  int a, 
  double a
}

